MuiBox-root overflow bug was fixed

--- a/irrigation-react/src/Tabs/Home.css
+++ b/irrigation-react/src/Tabs/Home.css
@@ -1,4 +1,4 @@
-.MuiBox-root-20 {
+.MuiBox-root {
   overflow: hidden !important;
 }
 
